# Change-detection-in-point-clouds-using-3D-fractal-dimension

./: CMakeLists.txt  README.md  TemporalSeriesPlugin.qrc  info.json
include/: ActionA.h  CMakeLists.txt  Node.h  Octree.h  OctreeGrid.h  TemporalSeriesPlugin.h  TemporalSeriesPluginInterface.h  TemporalSeriesPreviewWindow.h
src/: ActionA.cpp  CMakeLists.txt  Node.cpp  Octree.cpp  OctreeGrid.cpp  TemporalSeriesPlugin.cpp  TemporalSeriesPluginInterface.cpp  TemporalSeriesPreviewWindow.cpp
ui/: CMakeLists.txt  TemporalSeriesPluginInterface.ui  TemporalSeriesPreviewWindow.ui
